	 string.`

    Note that the backquoted does not require a backslash at the end
    of lines.
12. src/sltoken.c: When reading subsequent lines of a multiline
    string, increment the readline parse_level.
13. src/sltoken.c: When performing backslash expansion, if a solitary
    backslash occurs at the end of a line, or is preceeded by a
    newline at the end of a line, then ignore it.

{{{ Previous Versions

Changes since 2.1.3
1. src/slang.c: The identifier syntax was not being checked for
   symbols added to the global namespace.
2. slsh/slsh.c: If ENV_SLSH_PATH is undefined, set it to SLSH_PATH
3. */mkfiles/*: Modified the various makefile.all files to facilitate
   mingw32 builds.  Read INSTALL.pc for quick-start.
4. mkfiles/install.sl: Added a function to install the slang docs
5. src/slvideo.c: #define UNICODE so that wide-character functions are
   used instead of byte functions.  Also codepage set to 65001 in
   unicode mode.
6. src/slvideo.c: Added SLtt_is_utf8_mode.
7. src/sltermin.c:  Added support for new ncurses hex-encoded terminfo
   directories.
8. slsh/lib/tm/cmdopt.tm: Missing commas in the documentation for
   cmdopt_add.  (Doug Burke).
9. src/slarrmisc.inc: Changed inner-product code to use block arrays
   to be more cache friendly.  Since the block size is cpu-dependent,
   __get/set_innerprod_block_size functions have been added.  The
   default value is controlled by a variable in src/sllimits.h.
10. modules/termios-module.c: Added additional termios constants
    (Laurent Perez).
11. src/slarray.c: Better optimization when indexing arrays with
    ranges.
12. src/slsignal.c: If SLsystem fails, set the interpreter's errno
    value accordingly.
13. modules/rand-module.c: A uniform random number generator module,
    which also provides generators for some well-known distributions.
14. src/*.c: Changed field name for SLang_Object_Type.data_type to
    o_data_type.
15. src/slang.c: Optimization tweaks to improved performance for small